Fix footer bottom margin, including animations, so that it displays on mobile when the url bar is displayed

--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -227,7 +227,7 @@ body {
 }
 
 .footer {
-    bottom: 10px;
+    bottom: 60px;
     .buttons {
         button {
             background-color: rgba(255, 255, 255, 0);
